--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <button type="button" id="getChecked">Get Checked</button>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
